demo/users/chris/terraform/eks-aws-alb/nhtestv1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nhtestv1
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nhtestv1
